[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/level/Interactive/BaseInteractive.gd" type="Script" id=2]

[node name="BaseInteractive" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
__meta__ = {
"_edit_group_": true
}

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
